src/test/ui/suggestions/issue-61963.stderr
error: trait objects without an explicit `dyn` are deprecated
  --> $DIR/issue-61963.rs:21:14
   |
LL |     bar: Box<Bar>,
   |              ^^^ trait object without `dyn`
   |
note: the lint level is defined here
  --> $DIR/issue-61963.rs:3:9
   |
LL | #![deny(bare_trait_objects)]
   |         ^^^^^^^^^^^^^^^^^^
help: use `dyn`
   |
LL |     bar: Box<dyn Bar>,
   |              ^^^

error: trait objects without an explicit `dyn` are deprecated
  --> $DIR/issue-61963.rs:18:1
   |
LL | pub struct Foo {
   | ^^^ trait object without `dyn`
   |
help: use `dyn`
   |
LL | dyn pub struct Foo {
   | ^^^

error: aborting due to 2 previous errors

